--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,6 +5,7 @@
 
 @import "../../icons/style";
 
-body {
-  background-color: $pink;
+.rectangle {
+  position: absolute;
+  background-color: red;
 }
